# DataCleanTools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: example-local.yaml
docs/: README.md  data-and-config-design.md  implementation-status.md  pipeline-design.md  review-ui-design.md  system-design.md
src/image_labeling/: __init__.py  api.py  cli.py  config.py  jsonio.py  logging_utils.py  pipeline.py  stages.py  storage.py  uri.py
src/image_labeling/providers/: __init__.py  embedding.py  prelabel.py
tests/: test_config.py  test_local_pipeline.py
tools/: benchmark_siglip2_embedding.py  build_faiss_gpu_index.py  extract_siglip2_embeddings.py
